<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">lesson7</string>
    <string name="fetch">FetchRSS</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="rss_url">Enter RSS URL</string>
    <string name="defolt_rss">http://ifmo.ru/module/rss.php</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="http">http://</string>
</resources>
