<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textView" android:textSize="24dp" android:layout_gravity="center"
            />
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameRSS" android:textSize="24dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:id="@+id/textView1" android:textSize="24dp" android:layout_gravity="center"
            />
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/http"
            android:id="@+id/adresRSS" android:textSize="24dp"/>
    <Space
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/space" android:layout_weight="50"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/buttonadd" android:textSize="24dp" android:layout_gravity="center"
            />
</LinearLayout>