<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_weight="0"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rss_url"
                android:id="@+id/label" android:layout_column="0" android:layout_weight="2"
                android:layout_gravity="bottom" android:textSize="24dp" android:textIsSelectable="false"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:id="@+id/butListRSS"
                android:padding="0dp" android:maxHeight="20dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_weight="0">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/defolt_rss"
                android:id="@+id/rssURL" android:singleLine="true" android:layout_column="0"
                android:layout_weight="1" android:textColor="#000000"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fetch"
                android:id="@+id/fetchRss" android:layout_weight="0"
                />
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_weight="2">
        <ListView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/rssListView" android:layout_column="0"/>
    </TableRow>
</TableLayout>

